hphp/test/slow/inout/bad-mixed-mode-2.php.expectf

Fatal error: Encountered unexpected token '&'. in %s/bad-mixed-mode-2.php on line 3
